--- a/index.html
+++ b/index.html
@@ -96,9 +96,8 @@
       <div class="modal-body">
         <h4>Examples</h4>
         <ul>
-          <li><a href="javascript:openGCodeFromPath('examples/15mm_cube.gcode')">15mm_cube.gcode</a></li>
+          <li><a href="javascript:openGCodeFromPath('examples/bunny.gcode')">stanford_bunny.gcode</a></li>
           <li><a href="javascript:openGCodeFromPath('examples/octocat.gcode')">octocat.gcode</a></li>
-          <li><a href="javascript:openGCodeFromPath('examples/part.gcode')">part.gcode</a></li>
         </ul>
         <p>To view your own model, drag a gcode file from your desktop and drop it in this window.</p>
       </div>
