added support for offset angle in y

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <span class="brand" href="#">Being The Machine</span>
+          <span class="brand" href="#"><a href="beingthemachine.com">Being The Machine</a></span>
           <ul class="nav">
             <li><a href="javascript:openDialog()">Load Model</a></li>
             <li><a href="javascript:about()">About</a></li>
