--- a/index.html
+++ b/index.html
@@ -51,19 +51,6 @@
 
 
     </style>
-       
-    <!-- Google Analytics tracking code for artfordorks.com --> 
-<script>
-  /*
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-	
-	ga('create', 'UA-1764729-2', 'artfordorks.com');
-	ga('send', 'pageview');
-*/
-	</script>
 
 
     </head>
@@ -83,7 +70,7 @@
 	</ul>
 	<ul class="nav pull-right">
 		            <li><a href="https://github.com/Devendork/BeingTheMachine" target="_blank">Code on GitHub</a></li>
-		            <li><a href="http://artfordorks.com" target="_blank">artfordorks.com</a></li>
+		            <li><a href="http://beingthemachine.com" target="_blank">beingthemachine.com</a></li>
 	</ul>
         </div>
       </div>
