additional bluetooth support

--- a/www/index.html
+++ b/www/index.html
@@ -225,6 +225,7 @@
 <script type="text/javascript"src="js/gcode-parser.js"></script>
 <script type="text/javascript"src="js/gcode-model.js"></script>
 <script type="text/javascript"src="js/flavor.js"></script>
+<script type="text/javascript"src="js/bluetooth.js"></script>
 <script type="text/javascript"src="js/renderer.js"></script>
 <script type="text/javascript"src="js/ui.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
