trying to debug the filesystem error

--- a/www/index.html
+++ b/www/index.html
@@ -196,7 +196,7 @@
         </div>
       </div>
 
-      <div id="file_alert">
+<!--       <div id="file_alert">
       <div class="alert-dialog-mask"></div>
         <div class="alert-dialog">
           <div class="alert-dialog-content">
@@ -206,7 +206,7 @@
             <button id="bt_close_select" class="alert-dialog-button">Cancel</button>
           </div>
         </div>
-      </div>
+      </div> -->
 
     </ons-page>
   </ons-template>
