working files pre-image capture

--- a/www/index.html
+++ b/www/index.html
@@ -117,13 +117,13 @@
 <!--         <ons-list-item class="bottom-menu-item" ng-click="app.menu.setMainPage('options.html', {closeMenu: true})">      
           Options
         </ons-list-item> -->
-  <ons-list class="bottom-menu-list">
+ <!--  <ons-list class="bottom-menu-list">
     <ons-list-item class="list__item"> Render All Layers
       <label class="switch switch--list-item">
       <input id="render_layers" type="checkbox" class="switch__input" checked>
       <div class="switch__toggle"></div>
     </label>
- </ons-list-item>
+ </ons-list-item> -->
 
 <!--         <ons-list-item class="bottom-menu-item" ng-click="menu.setMainPage('page1.html', {closeMenu: true})">
           Load New Model
