capture image and simple point sampling in place

--- a/www/index.html
+++ b/www/index.html
@@ -147,6 +147,9 @@
             <ons-icon  id="cube" icon="fa-cube" size="28px" fixed-width="false"></ons-icon>
             <ons-icon  id ="square" icon="fa-square" size="28px" fixed-width="false"></ons-icon>
           </ons-toolbar-button>
+          <ons-toolbar-button>
+              <ons-icon  id ="camera" icon="fa-camera" size="28px" fixed-width="false"></ons-icon>
+          </ons-toolbar-button>
         </div>
         <div id ="title" class="center">G-Code Viewer</div>
         <div class="right">
@@ -218,7 +221,7 @@
 
     </ons-page>
   </ons-template>
-
+  <img style="display:none;" id="myImage" src="" />
 
 
  
