reup initialize code, add logo and names, working model generation

--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
-  <title>My App</title>  
+  <title>3D Printing En Plein Air</title>  
   
   <link rel="stylesheet" href="js/onsen/css/onsenui.css">  
   <link rel="stylesheet" href="css/onsen-css-components-blue-basic-theme.css">  
@@ -151,7 +151,7 @@
               <ons-icon  id ="camera" icon="fa-camera" size="28px" fixed-width="false"></ons-icon>
           </ons-toolbar-button>
         </div>
-        <div id ="title" class="center">G-Code Viewer</div>
+        <div id ="title" class="center">Plein Air Fab</div>
         <div class="right">
           <ons-toolbar-button>
             <ons-icon icon="fa-arrow-left" id="decrement" size="28px" fixed-width="false"></ons-icon>
